--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "fs": "^0.0.1-security",
     "nodemon": "^3.1.7",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
